src/main/java/com/example/RestTicketSystem/error/EventNotFoundException.java
package com.example.RestTicketSystem.error;

public class EventNotFoundException extends RuntimeException {
    public EventNotFoundException(Integer id) {
        super("Event id not found: " + id);
    }
}